tests/neg/syntax_missing_dot.baa
// EXPECT: [Error]
// EXPECT: مساعدة
// EXPECT: أضف '.' في نهاية الجملة.
صحيح الرئيسية() {
    صحيح س = 1
    إرجع 0.
}
